[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/rogerraccoon2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/1051727_Madness-Combat-65-OST-Full.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/ARclean.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/deagleClean.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 12.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 970.5, 89.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.75, 567 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 362, 536 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -918, -503 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -2.5, -0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="SmallSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="BigSpawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 2034, 1006 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="GameBounds" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBounds"]
position = Vector2( 960.5, 59.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameBounds"]
position = Vector2( 962, 1169 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameBounds"]
position = Vector2( -23.25, 549 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameBounds"]
position = Vector2( 1940, 546 )
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Background" type="ColorRect" parent="CanvasLayer/HUD"]
margin_right = 1920.0
margin_bottom = 146.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="AmmoCount" type="Label" parent="CanvasLayer/HUD"]
margin_left = 37.0
margin_top = 1023.0
margin_right = 248.0
margin_bottom = 1038.0
rect_scale = Vector2( 2, 2 )

[node name="ScoreText" type="Label" parent="CanvasLayer/HUD"]
margin_left = 32.0
margin_top = 28.0
margin_right = 232.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )

[node name="MoneyText" type="Label" parent="CanvasLayer/HUD"]
margin_left = 32.0
margin_top = 100.0
margin_right = 232.0
margin_bottom = 140.0
rect_scale = Vector2( 2, 2 )

[node name="BuyMenu" type="Node2D" parent="CanvasLayer/HUD"]

[node name="Deagle" type="Node2D" parent="CanvasLayer/HUD/BuyMenu"]
position = Vector2( 700, 35 )

[node name="Background" type="ColorRect" parent="CanvasLayer/HUD/BuyMenu/Deagle"]
margin_right = 80.0
margin_bottom = 80.0
color = Color( 0.411765, 0.411765, 0.411765, 1 )

[node name="Weapon" type="TextureRect" parent="CanvasLayer/HUD/BuyMenu/Deagle"]
margin_left = 7.0
margin_top = 9.0
margin_right = 47.0
margin_bottom = 49.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Number" type="Label" parent="CanvasLayer/HUD/BuyMenu/Deagle"]
margin_left = 32.0
margin_top = 85.0
margin_right = 40.0
margin_bottom = 99.0
rect_scale = Vector2( 2, 2 )
text = "1"

[node name="Price" type="Label" parent="CanvasLayer/HUD/BuyMenu/Deagle"]
margin_left = 8.0
margin_top = -30.0
margin_right = 40.0
margin_bottom = -16.0
rect_scale = Vector2( 2, 2 )
text = "200$"

[node name="BuyText" type="Label" parent="CanvasLayer/HUD/BuyMenu"]
margin_left = 508.0
margin_top = 37.0
margin_right = 600.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
text = "Buy Using 
Number Keys"

[node name="AR" type="Node2D" parent="CanvasLayer/HUD/BuyMenu"]
position = Vector2( 800, 35 )

[node name="Background" type="ColorRect" parent="CanvasLayer/HUD/BuyMenu/AR"]
margin_right = 80.0
margin_bottom = 80.0
color = Color( 0.411765, 0.411765, 0.411765, 1 )

[node name="Weapon" type="TextureRect" parent="CanvasLayer/HUD/BuyMenu/AR"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Number" type="Label" parent="CanvasLayer/HUD/BuyMenu/AR"]
margin_left = 32.0
margin_top = 85.0
margin_right = 40.0
margin_bottom = 99.0
rect_scale = Vector2( 2, 2 )
text = "2"

[node name="Price" type="Label" parent="CanvasLayer/HUD/BuyMenu/AR"]
margin_left = 8.0
margin_top = -30.0
margin_right = 40.0
margin_bottom = -16.0
rect_scale = Vector2( 2, 2 )
text = "500$"

[node name="GameOverText" type="Label" parent="CanvasLayer/HUD"]
visible = false
margin_left = 776.0
margin_top = 507.0
margin_right = 849.0
margin_bottom = 521.0
rect_scale = Vector2( 5, 5 )
text = "Game Over"
